--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1965,6 +1965,9 @@ input[type="checkbox"]:checked::before {
   .md\:pr-\[20\%\] {
     padding-right: 20%;
   }
+  .md\:pt-10p {
+    padding-top: 10%;
+  }
   .md\:text-center {
     text-align: center;
   }
@@ -2063,6 +2066,12 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:pt-0 {
     padding-top: 0px;
+  }
+  .lg\:pb-5p {
+    padding-bottom: 5%;
+  }
+  .lg\:pt-10p {
+    padding-top: 10%;
   }
   .lg\:text-\[2\.5rem\] {
     font-size: 2.5rem;
