--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1284,6 +1284,12 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
+.h-\[315px\] {
+  height: 315px;
+}
+.h-\[202\.5px\] {
+  height: 202.5px;
+}
 .max-h-16 {
   max-height: 4rem;
 }
@@ -1322,6 +1328,12 @@ input[type="checkbox"]:checked::before {
 }
 .w-full {
   width: 100%;
+}
+.w-\[560px\] {
+  width: 560px;
+}
+.w-\[360px\] {
+  width: 360px;
 }
 .max-w-3xl {
   max-width: 48rem;
@@ -1489,17 +1501,14 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\/uploads\/images\/manamei-63\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-63.jpg');
 }
-.bg-\[url\(\'\/uploads\/images\/manamei-92\.JPEG\'\)\] {
-  background-image: url('/uploads/images/manamei-92.JPEG');
+.bg-\[url\(\'\/uploads\/images\/manamei-93\.JPEG\'\)\] {
+  background-image: url('/uploads/images/manamei-93.JPEG');
 }
 .bg-\[url\(\'\{\{page\.details\.featured_image\}\}\'\)\] {
   background-image: url('{{page.details.featured_image}}');
 }
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-93\.JPEG\'\)\] {
-  background-image: url('/uploads/images/manamei-93.JPEG');
 }
 .bg-cover {
   background-size: cover;
@@ -1508,9 +1517,6 @@ input[type="checkbox"]:checked::before {
   background-attachment: fixed;
 }
 .bg-\[bottom\] {
-  background-position: bottom;
-}
-.bg-bottom {
   background-position: bottom;
 }
 .bg-no-repeat {
@@ -1908,6 +1914,9 @@ input[type="checkbox"]:checked::before {
   .md\:h-\[32vh\] {
     height: 32vh;
   }
+  .md\:h-\[394px\] {
+    height: 394px;
+  }
   .md\:min-h-\[90vh\] {
     min-height: 90vh;
   }
@@ -1922,6 +1931,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:w-\[90\%\] {
     width: 90%;
+  }
+  .md\:w-\[700px\] {
+    width: 700px;
   }
   .md\:max-w-\[80vw\] {
     max-width: 80vw;
@@ -2023,11 +2035,17 @@ input[type="checkbox"]:checked::before {
   .lg\:h-\[60vh\] {
     height: 60vh;
   }
+  .lg\:h-\[315px\] {
+    height: 315px;
+  }
   .lg\:w-\[30\%\] {
     width: 30%;
   }
   .lg\:w-\[80\%\] {
     width: 80%;
+  }
+  .lg\:w-\[560px\] {
+    width: 560px;
   }
   .lg\:max-w-\[40vw\] {
     max-width: 40vw;
