video responsive and links

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -11,7 +11,7 @@
             {% if page.heading.button-video.type == 'youtube' %}
 
                 <!-- YouTube iframe -->
-                <iframe class="w-[360px] h-[202.5px] md:w-[700px] md:h-[394px] lg:w-[560px] lg:h-[315px]" src="{{page.heading.button-video.url}}" frameborder="0"
+                <iframe class="w-[360px] h-[202.5px] md:w-[700px] md:h-[394px]" src="{{page.heading.button-video.url}}" frameborder="0"
                     allowfullscreen></iframe>
                 {% else %}
 
