--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
     <!-- Cookie Banner -->
     {% include cookie-banner.html %}
 
-    <!-- Popup Masterclass -->
+    <!-- Popup -->
+    {% include popup-confidance.html %}
 
     <!-- Alpine -->
     <script src="//unpkg.com/alpinejs" defer></script>
