update investment-ltm button

--- a/_includes/investment-ltm.html
+++ b/_includes/investment-ltm.html
@@ -25,7 +25,7 @@
         </div>
         <!-- CTA -->
     <div class="mt-8">
-        <a href="#" class="button">Join Now</a>
+        <a href="{{page.cta.button.url}}" class="button">Join Now</a>
     </div>
     </div>
 </section>
