--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1170,6 +1170,10 @@ input[type="checkbox"]:checked::before {
   margin-top: auto;
   margin-bottom: auto;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -1229,6 +1233,9 @@ input[type="checkbox"]:checked::before {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mt-16 {
+  margin-top: 4rem;
 }
 .block {
   display: block;
@@ -1563,6 +1570,10 @@ input[type="checkbox"]:checked::before {
   padding-top: 10%;
   padding-bottom: 10%;
 }
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1574,10 +1585,6 @@ input[type="checkbox"]:checked::before {
 .py-\[0\.25rem\] {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1974,10 +1981,6 @@ input[type="checkbox"]:checked::before {
   .md\:py-10p {
     padding-top: 10%;
     padding-bottom: 10%;
-  }
-  .md\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
   }
   .md\:pl-0 {
     padding-left: 0px;
