--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1441,6 +1441,9 @@ input[type="checkbox"]:checked::before {
 .border-t {
   border-top-width: 1px;
 }
+.border-b-0 {
+  border-bottom-width: 0px;
+}
 .border-feature {
   --tw-border-opacity: 1;
   border-color: rgb(237 213 135 / var(--tw-border-opacity));
@@ -1473,6 +1476,10 @@ input[type="checkbox"]:checked::before {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1767,6 +1774,12 @@ input[type="checkbox"]:checked::before {
 .placeholder\:text-white::placeholder {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.last\:mb-0:last-child {
+  margin-bottom: 0px;
+}
+.last\:border-b-\[1px\]:last-child {
+  border-bottom-width: 1px;
 }
 .hover\:bg-feature\/70:hover {
   background-color: rgb(237 213 135 / 0.7);
