--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     {% include cookie-banner.html %}
 
     <!-- Popup -->
-    {% include popup-confidance.html %}
+    {% include popup-ttc.html %}
 
     <!-- Alpine -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
