--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1107,6 +1107,15 @@ input[type="checkbox"]:checked::before {
 .top-\[50\%\] {
   top: 50%;
 }
+.bottom-6 {
+  bottom: 1.5rem;
+}
+.left-1\/2 {
+  left: 50%;
+}
+.bottom-20 {
+  bottom: 5rem;
+}
 .z-20 {
   z-index: 20;
 }
@@ -1233,6 +1242,12 @@ input[type="checkbox"]:checked::before {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
+}
 .block {
   display: block;
 }
@@ -1290,11 +1305,20 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
+.h-auto {
+  height: auto;
+}
 .max-h-16 {
   max-height: 4rem;
 }
 .max-h-\[80vh\] {
   max-height: 80vh;
+}
+.max-h-screen {
+  max-height: 100vh;
+}
+.max-h-\[90vh\] {
+  max-height: 90vh;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1332,6 +1356,9 @@ input[type="checkbox"]:checked::before {
 .w-full {
   width: 100%;
 }
+.w-auto {
+  width: auto;
+}
 .max-w-3xl {
   max-width: 48rem;
 }
@@ -1341,11 +1368,25 @@ input[type="checkbox"]:checked::before {
 .max-w-\[95vw\] {
   max-width: 95vw;
 }
+.max-w-fit {
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+}
+.max-w-full {
+  max-width: 100%;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
 .grow {
   flex-grow: 1;
+}
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer {
   cursor: pointer;
@@ -1474,11 +1515,17 @@ input[type="checkbox"]:checked::before {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-white\/80 {
+  background-color: rgb(255 255 255 / 0.8);
+}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
+}
+.bg-opacity-80 {
+  --tw-bg-opacity: 0.8;
 }
 .bg-\[url\(\'\'\)\] {
   background-image: url('');
@@ -1536,6 +1583,9 @@ input[type="checkbox"]:checked::before {
 }
 .p-5p {
   padding: 5%;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1863,6 +1913,12 @@ input[type="checkbox"]:checked::before {
   }
   .md\:top-\[2rem\] {
     top: 2rem;
+  }
+  .md\:bottom-10p {
+    bottom: 10%;
+  }
+  .md\:top-10p {
+    top: 10%;
   }
   .md\:order-first {
     order: -9999;
