application thank you page tweaks

--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,6 +1,6 @@
 <section class="bg-feature text-black text-center py-4">
-    <a href="/confidance.html">
-        <p><strong>New Mana Movement Course Out Now</strong>
-            <br>Discover confiDance.</p>
+    <a href="/ttc-apply.html">
+        <p><strong>Now accepting applications for the upcoming 16-Week Live Online Mana Movement Teacher Training</strong>
+            <br>May 12th-August 31st</p>
     </a>
 </section>
