updates.  Still need to update waitlist button and add popup and banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Banner Masterclass -->
-    {% include banner-masterclass.html %}
+    <!-- {% include banner-masterclass.html %} -->
 
     <!-- Site Header -->
     {% include mobile-nav.html %}
@@ -24,7 +24,7 @@
     {% include cookie-banner.html %}
 
     <!-- Popup -->
-    {% include popup-ttc.html %}
+    <!-- {% include popup-ttc.html %} -->
 
     <!-- Alpine -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
