--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
     <!-- Footer -->
     {% include site-footer.html %}
 
+    <!-- Popup TTC -->
+    {% include popup-ttc.html %}
+
     <!-- Cookie Banner -->
     {% include cookie-banner.html %}
-
-    <!-- Popup -->
-    {% include popup-ttc.html %}
 
     <!-- Alpine -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
