copy but needs styling

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1535,6 +1535,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-58\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-58.jpg');
+}
 .bg-cover {
   background-size: cover;
 }
