--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1956,6 +1956,12 @@ input[type="checkbox"]:checked::before {
   .md\:min-h-\[90vh\] {
     min-height: 90vh;
   }
+  .md\:min-h-\[70vh\] {
+    min-height: 70vh;
+  }
+  .md\:min-h-\[80vh\] {
+    min-height: 80vh;
+  }
   .md\:w-\[40\%\] {
     width: 40%;
   }
@@ -2055,6 +2061,9 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:mt-16 {
     margin-top: 4rem;
+  }
+  .lg\:mt-10p {
+    margin-top: 10%;
   }
   .lg\:block {
     display: block;
