--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -2019,6 +2019,10 @@ input[type="checkbox"]:checked::before {
     padding-top: 10%;
     padding-bottom: 10%;
   }
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
   .md\:pl-0 {
     padding-left: 0px;
   }
@@ -2129,6 +2133,9 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:pt-10p {
     padding-top: 10%;
+  }
+  .lg\:pt-5p {
+    padding-top: 5%;
   }
   .lg\:text-\[2\.5rem\] {
     font-size: 2.5rem;
