--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1113,6 +1113,9 @@ input[type="checkbox"]:checked::before {
 .top-\[50\%\] {
   top: 50%;
 }
+.bottom-1 {
+  bottom: 0.25rem;
+}
 .z-20 {
   z-index: 20;
 }
@@ -1393,6 +1396,9 @@ input[type="checkbox"]:checked::before {
 .items-center {
   align-items: center;
 }
+.items-baseline {
+  align-items: baseline;
+}
 .justify-start {
   justify-content: flex-start;
 }
@@ -1496,10 +1502,6 @@ input[type="checkbox"]:checked::before {
 .bg-white\/80 {
   background-color: rgb(255 255 255 / 0.8);
 }
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1527,6 +1529,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\/uploads\/images\/manamei-52\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-52.jpg');
 }
+.bg-\[url\(\'\/uploads\/images\/manamei-58\.jpg\'\)\] {
+  background-image: url('/uploads/images/manamei-58.jpg');
+}
 .bg-\[url\(\'\/uploads\/images\/manamei-63\.jpg\'\)\] {
   background-image: url('/uploads/images/manamei-63.jpg');
 }
@@ -1538,9 +1543,6 @@ input[type="checkbox"]:checked::before {
 }
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
-}
-.bg-\[url\(\'\/uploads\/images\/manamei-58\.jpg\'\)\] {
-  background-image: url('/uploads/images/manamei-58.jpg');
 }
 .bg-cover {
   background-size: cover;
@@ -1641,9 +1643,6 @@ input[type="checkbox"]:checked::before {
 .pt-5p {
   padding-top: 5%;
 }
-.pt-20 {
-  padding-top: 5rem;
-}
 .text-left {
   text-align: left;
 }
@@ -1692,11 +1691,26 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[6rem\] {
+  font-size: 6rem;
+}
+.text-\[5rem\] {
+  font-size: 5rem;
+}
+.text-\[4rem\] {
+  font-size: 4rem;
+}
 .font-\[100\] {
   font-weight: 100;
 }
 .font-extralight {
   font-weight: 200;
+}
+.font-semibold {
+  font-weight: 600;
+}
+.font-medium {
+  font-weight: 500;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1719,8 +1733,23 @@ input[type="checkbox"]:checked::before {
 .leading-\[1em\] {
   line-height: 1em;
 }
+.leading-normal {
+  line-height: 1.5;
+}
+.leading-tight {
+  line-height: 1.25;
+}
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.-tracking-tight {
+  letter-spacing: 0.025em;
+}
+.-tracking-tighter {
+  letter-spacing: 0.05em;
+}
+.tracking-tighter {
+  letter-spacing: -0.05em;
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -1740,6 +1769,10 @@ input[type="checkbox"]:checked::before {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[\#fcbe92\] {
+  --tw-text-opacity: 1;
+  color: rgb(252 190 146 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1953,14 +1986,11 @@ input[type="checkbox"]:checked::before {
   .md\:h-\[394px\] {
     height: 394px;
   }
-  .md\:min-h-\[90vh\] {
-    min-height: 90vh;
-  }
-  .md\:min-h-\[70vh\] {
-    min-height: 70vh;
-  }
   .md\:min-h-\[80vh\] {
     min-height: 80vh;
+  }
+  .md\:min-h-\[90vh\] {
+    min-height: 90vh;
   }
   .md\:w-\[40\%\] {
     width: 40%;
@@ -2011,6 +2041,10 @@ input[type="checkbox"]:checked::before {
     padding-left: 10%;
     padding-right: 10%;
   }
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
   .md\:px-5p {
     padding-left: 5%;
     padding-right: 5%;
@@ -2018,10 +2052,6 @@ input[type="checkbox"]:checked::before {
   .md\:py-10p {
     padding-top: 10%;
     padding-bottom: 10%;
-  }
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
   .md\:pl-0 {
     padding-left: 0px;
@@ -2063,11 +2093,11 @@ input[type="checkbox"]:checked::before {
   .lg\:mt-0 {
     margin-top: 0px;
   }
-  .lg\:mt-16 {
-    margin-top: 4rem;
-  }
   .lg\:mt-10p {
     margin-top: 10%;
+  }
+  .lg\:mt-16 {
+    margin-top: 4rem;
   }
   .lg\:block {
     display: block;
