hero banner responsive

--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -2065,6 +2065,12 @@ input[type="checkbox"]:checked::before {
   .md\:text-\[1\.8rem\] {
     font-size: 1.8rem;
   }
+  .md\:text-\[1\.5rem\] {
+    font-size: 1.5rem;
+  }
+  .md\:text-\[3rem\] {
+    font-size: 3rem;
+  }
 }
 @media (min-width: 1024px) {
   .lg\:col-span-2 {
