--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1179,6 +1179,10 @@ input[type="checkbox"]:checked::before {
   margin-top: auto;
   margin-bottom: auto;
 }
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -1241,6 +1245,9 @@ input[type="checkbox"]:checked::before {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mb-32 {
+  margin-bottom: 8rem;
 }
 .block {
   display: block;
@@ -1619,6 +1626,10 @@ input[type="checkbox"]:checked::before {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1642,6 +1653,15 @@ input[type="checkbox"]:checked::before {
 }
 .pt-5p {
   padding-top: 5%;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
+}
+.pb-24 {
+  padding-bottom: 6rem;
 }
 .text-left {
   text-align: left;
@@ -2071,6 +2091,9 @@ input[type="checkbox"]:checked::before {
   }
   .md\:pr-\[20\%\] {
     padding-right: 20%;
+  }
+  .md\:pb-10p {
+    padding-bottom: 10%;
   }
   .md\:text-center {
     text-align: center;
