--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,6 +1,6 @@
 <section class="bg-feature text-black text-center py-4">
-    <a href="/ttc-apply.html">
-        <p><strong>Now accepting applications for the upcoming 16-Week Live Online Mana Movement Teacher Training</strong>
-            <br>May 12th-August 31st</p>
+    <a href="/women-who-feel.html">
+        <p><strong>Join Mana Mei’s upcoming Live Online Masterclass “This is for Women who Feel…”</strong>
+            <br>Tuesday, July 8th. Click here for more information and to register today!</p>
     </a>
 </section>
