--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Banner Masterclass -->
-    <!-- {% include banner-masterclass.html %} -->
+    {% include banner-masterclass.html %}
 
     <!-- Site Header -->
     {% include mobile-nav.html %}
