--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1393,6 +1393,9 @@ input[type="checkbox"]:checked::before {
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
