--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1350,6 +1350,9 @@ input[type="checkbox"]:checked::before {
 .w-full {
   width: 100%;
 }
+.w-\[40\%\] {
+  width: 40%;
+}
 .max-w-3xl {
   max-width: 48rem;
 }
@@ -1858,6 +1861,9 @@ input[type="checkbox"]:checked::before {
   }
   .sm\:col-span-3 {
     grid-column: span 3 / span 3;
+  }
+  .sm\:col-span-4 {
+    grid-column: span 4 / span 4;
   }
   .sm\:mb-0 {
     margin-bottom: 0px;
