--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -2086,6 +2086,9 @@ input[type="checkbox"]:checked::before {
   .lg\:left-\[20\%\] {
     left: 20%;
   }
+  .lg\:order-first {
+    order: -9999;
+  }
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2114,6 +2117,12 @@ input[type="checkbox"]:checked::before {
   }
   .lg\:mt-16 {
     margin-top: 4rem;
+  }
+  .lg\:mt-8 {
+    margin-top: 2rem;
+  }
+  .lg\:mt-10p {
+    margin-top: 10%;
   }
   .lg\:block {
     display: block;
