apply-ltm padding

--- a/_includes/form-apply-ltm.html
+++ b/_includes/form-apply-ltm.html
@@ -10,22 +10,22 @@
 
                 <!-- First Name -->
                 <div class="mc-field-group lg:col-span-2">
-                    <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full" placeholder=" First Name" id="mce-FNAME" required="" value="">
+                    <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full py-2 px-4" placeholder="First Name" id="mce-FNAME" required="" value="">
                     </div>
                 
                 <!-- Last Name -->
                 <div class="mc-field-group lg:col-span-2">
-                    <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full" placeholder=" Last Name" id="mce-LNAME" required="" value="">
+                    <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full py-2 px-4" placeholder="Last Name" id="mce-LNAME" required="" value="">
                 </div>
 
                 <!-- Email -->
                 <div class="mc-field-group lg:col-span-2">
-                    <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full" placeholder=" Email" id="mce-EMAIL" required="" value="">
+                    <input type="email" name="EMAIL" class="required email bg-transparent border border-white w-full py-2 px-4" placeholder="Email" id="mce-EMAIL" required="" value="">
                 </div>
 
                 <!-- Button -->
                 <div class="clear col-span-1">
-                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button rounded-none py-0 cursor-pointer w-full"
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button rounded-none cursor-pointer w-full py-2 px-4"
                         value="Apply">
                 </div>
 
