--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1625,6 +1625,10 @@ input[type="checkbox"]:checked::before {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 .pb-0 {
   padding-bottom: 0px;
 }
