--- a/_includes/how-it-works.html
+++ b/_includes/how-it-works.html
@@ -7,11 +7,11 @@
   <div class="text-center px-5p md:px-10p">
     <h2 class="heading-lg-sans text-feature">How it Works</h2>
     <div class="lg:w-[80%] mx-auto mb-12">
-      <p>This 3-Month Program follows the LTM Model. Each month we will dive deep into one of the Pillars of Connection. All weekly practices and transmissions will focus on a different aspect of the Pillar.</p>
+      <p>This 4-Month Program follows the LTM Model. During Months 1-3 we will dive deep into one of the Pillars of Connection. All weekly practices and transmissions will focus on a different aspect of the Pillar. Month 4 focusing on Embodied Space Holding & Authentic Facilitation.</p>
     </div>
   </div>
 
-  <div class="grid lg:grid-cols-3 gap-12 text-center px-5p md:px-10p">
+  <div class="grid lg:grid-cols-2 gap-12 text-center px-5p md:px-10p">
 
     <!-- Month 1 -->
     <div>
@@ -43,6 +43,18 @@
       <p>Embodying Authentic Expression</p>
       <p>Becoming the Leader of your Life</p>
     </div>
+
+    <!-- Month 4 -->
+    <div>
+      <h3 class="font-serif text-2xl mb-4 text-feature">Month 4</h3>
+      <p class="uppercase text-feature">Authentic Facilitation & Embodied Space Holding</p>
+      <p>How to create and hold space for others</p>
+      <p>Finding your voice as a Feminine Leader</p>
+      <p>Learning to guide an Embodied Dance Journey</p>
+      <p>Building Business the Feminine Way</p>
+      <p>LTM as a Somatic Healing Modality</p>
+    </div>
+
   </div>
 
   <div class="mt-12 lg:w-[80%] mx-auto text-center px-10p">
@@ -61,9 +73,20 @@
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p flex justify-center items-center">
           <div>
-              <p>This 3-month journey is a time to turn your attention inwards, a time of introspection and connecting deeply with your inner landscape.</p>
+              <p>This 4-month journey is a time to turn your attention inwards, a time of introspection and connecting deeply with your inner landscape.</p>
               <p>Each month, you will be invited to devote yourself to your inner work, prioritize YOU and the process of awakening self awareness at all levels.</p>
+              <p>You do this by committing to:</p>
+              <ul class="mb-4 ml-4">
+                <li>Daily pre-recorded embodied movement and somatic dance practices</li>
+                <li>Weekly journaling prompts</li>
+                <li>Weekly live group transmissions with Mana Mei & Guest Facilitators</li>
+                <li>Monthly POD Support Calls</li>
+                <li>1:1 Mentoring calls</li>
+              </ul>
               <p>Stepping onto this path is stepping into a new way of being. One that prioritizes creating sacred space every day to dive into deep, uninterrupted, vulnerable presence with yourself.</p>
+              <p>Months 1-3 consists of 3 weeks of content, and 1 week of integration.</p>
+              <p>The Integration weeks are intended to be a time when you are free to replenish and nourish your self, catch up on missed lectures and practices, and prepare yourself to step into the next month.</p>
+              <p>Month 4 is a focused training where you will learn to guide an LTM Embodied Dance Journey, as well as the ins-and-outs of Art of Embodied Space Holding & Authentic Facilitation.</p> 
           </div>
       </div>
 
