--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1553,6 +1553,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/pathways-of-life-8\.jpg\'\)\] {
+  background-image: url('/uploads/images/pathways-of-life-8.jpg');
+}
 .bg-cover {
   background-size: cover;
 }
