--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -319,9 +319,11 @@ video {
   display: none;
 }
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 body {
+  overflow-x: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   font-family: Josefin Sans, sans-serif;
