--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,6 +1,5 @@
-<section class="bg-feature text-black text-center py-4">
+<section class="bg-feature text-black text-center py-4 px-4 md:px-16">
     <a href="/women-who-feel.html">
-        <p><strong>Join Mana Mei’s upcoming Live Online Masterclass “This is for Women who Feel…”</strong>
-            <br>Tuesday, July 8th. Click here for more information and to register today!</p>
+        <p>Join Mana Mei in collaboration with Somatic Analytical Psychologist, Ka for their upcoming 4-Week Live Online Program, “Pathways of Life” - a deep dive experiential course to support you in rising into personal empowerment through the Mind-Body exploration of the Feminine Shapes</p>
     </a>
 </section>
