--- a/_includes/banner-masterclass.html
+++ b/_includes/banner-masterclass.html
@@ -1,5 +1,5 @@
 <section class="bg-feature text-black text-center py-4 px-4 md:px-16">
-    <a href="/women-who-feel.html">
+    <a href="/pathways-of-life.html">
         <p>Join Mana Mei in collaboration with Somatic Analytical Psychologist, Ka for their upcoming 4-Week Live Online Program, “Pathways of Life” - a deep dive experiential course to support you in rising into personal empowerment through the Mind-Body exploration of the Feminine Shapes</p>
     </a>
 </section>
