Changing the image to match the popup

--- a/_includes/popup-pathways-of-life.html
+++ b/_includes/popup-pathways-of-life.html
@@ -1,21 +1,27 @@
-<div id="popup"
-    class="hidden fixed inset-0 flex items-center justify-center z-20 bg-black bg-opacity-80">
+<div id="popup" class="hidden fixed inset-0 flex items-center justify-center z-20 bg-black bg-opacity-80">
 
     <div id="popupContent" class="relative">
 
-        <img src="/uploads/images/women-who-feel-1.jpg" alt="Popup Image"
+        <img src="/uploads/images/pathways-of-life-1.jpg" alt="Pathways of Life"
             class="w-auto h-auto max-h-[80vh] max-w-[90vw]" />
 
 
-            <button id="popupClose"
-            class="absolute top-4 right-6 text-[1.5rem] font-100 text-black hover:text-feature hover:duration-500">
+        <button id="popupClose"
+            class="absolute top-[2.5rem] right-12 text-[1.5rem] font-100 text-black hover:text-feature hover:duration-500">
             X
         </button>
 
 
-        <div class="absolute bottom-[26%] md:bottom-[29%] lg:bottom-[28%] left-[33%] md:left-[18%] lg:left-[20%] transform -translate-x-1/2">
-            <a href="/women-who-feel.html" class="button bg-white/80 text-black">Register Now</a>
+        <div class="absolute inset-0 flex flex-col justify-center items-center text-center">
+            <div class="text-feature">
+                <h2 class="font-pathways text-[2rem]">Pathways of Life</h2>
+                <p>Personal Empowerment through Mind-Body Exploration of Feminine Shapes</p>
+                <p class="uppercase">4-Week Live Online Program</p>
+                <p class="uppercase">August 31st - September 27th</p>
+                <a href="/pathways-of-life.html" class="button bg-white/80 text-black">Enroll Now</a>
+            </div>
         </div>
+
     </div>
 </div>
 
