--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1164,6 +1164,12 @@ input[type="checkbox"]:checked::before {
 .top-\[10\%\] {
   top: 10%;
 }
+.right-\[1rem\] {
+  right: 1rem;
+}
+.right-3 {
+  right: 0.75rem;
+}
 .z-20 {
   z-index: 20;
 }
@@ -1318,6 +1324,9 @@ input[type="checkbox"]:checked::before {
 .aspect-portrait {
   aspect-ratio: 3 / 4;
 }
+.aspect-\[3\/4\] {
+  aspect-ratio: 3/4;
+}
 .h-12 {
   height: 3rem;
 }
@@ -1360,11 +1369,17 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
+.h-\[90vh\] {
+  height: 90vh;
+}
 .max-h-16 {
   max-height: 4rem;
 }
 .max-h-\[80vh\] {
   max-height: 80vh;
+}
+.max-h-\[90vh\] {
+  max-height: 90vh;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1450,6 +1465,9 @@ input[type="checkbox"]:checked::before {
 }
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1563,6 +1581,16 @@ input[type="checkbox"]:checked::before {
 .bg-white\/80 {
   background-color: rgb(255 255 255 / 0.8);
 }
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-feature\/80 {
+  background-color: rgb(237 213 135 / 0.8);
+}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1617,6 +1645,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
 }
+.bg-\[url\(\'\/uploads\/images\/pathways-of-life-13\.jpg\'\)\] {
+  background-image: url('/uploads/images/pathways-of-life-13.jpg');
+}
 .bg-contain {
   background-size: contain;
 }
@@ -1628,6 +1659,9 @@ input[type="checkbox"]:checked::before {
 }
 .bg-\[bottom\] {
   background-position: bottom;
+}
+.bg-center {
+  background-position: center;
 }
 .bg-no-repeat {
   background-repeat: no-repeat;
@@ -1646,6 +1680,9 @@ input[type="checkbox"]:checked::before {
 }
 .p-5p {
   padding: 5%;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1796,6 +1833,12 @@ input[type="checkbox"]:checked::before {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-\[2\.5rem\] {
+  font-size: 2.5rem;
+}
+.text-\[2\.75rem\] {
+  font-size: 2.75rem;
+}
 .font-\[100\] {
   font-weight: 100;
 }
@@ -1828,6 +1871,12 @@ input[type="checkbox"]:checked::before {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.leading-snug {
+  line-height: 1.375;
+}
+.leading-normal {
+  line-height: 1.5;
 }
 .tracking-tighter {
   letter-spacing: -0.05em;
@@ -1870,6 +1919,9 @@ input[type="checkbox"]:checked::before {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 @font-face {
