--- a/_includes/popup-pathways-of-life.html
+++ b/_includes/popup-pathways-of-life.html
@@ -26,7 +26,7 @@
       <div class="flex items-center justify-center p-6 bg-dark">
         <div class="text-feature text-center">
           <p class="uppercase">August 31st - September 27th</p>
-          <a href="/pathways-of-life.html" class="button bg-feature/80 text-dark">Enroll Now</a>
+          <a href="/pathways-of-life.html" class="button bg-feature/80 text-dark border-0">Enroll Now</a>
         </div>
       </div>
     </div>
