--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -1113,6 +1113,9 @@ input[type="checkbox"]:checked::before {
 .left-\[50\%\] {
   left: 50%;
 }
+.right-3 {
+  right: 0.75rem;
+}
 .right-5p {
   right: 5%;
 }
@@ -1142,33 +1145,6 @@ input[type="checkbox"]:checked::before {
 }
 .top-\[50\%\] {
   top: 50%;
-}
-.right-8 {
-  right: 2rem;
-}
-.top-8 {
-  top: 2rem;
-}
-.right-16 {
-  right: 4rem;
-}
-.top-12 {
-  top: 3rem;
-}
-.right-12 {
-  right: 3rem;
-}
-.top-\[2\.5rem\] {
-  top: 2.5rem;
-}
-.top-\[10\%\] {
-  top: 10%;
-}
-.right-\[1rem\] {
-  right: 1rem;
-}
-.right-3 {
-  right: 0.75rem;
 }
 .z-20 {
   z-index: 20;
@@ -1321,11 +1297,11 @@ input[type="checkbox"]:checked::before {
 .hidden {
   display: none;
 }
-.aspect-portrait {
-  aspect-ratio: 3 / 4;
-}
 .aspect-\[3\/4\] {
   aspect-ratio: 3/4;
+}
+.aspect-portrait {
+  aspect-ratio: 3 / 4;
 }
 .h-12 {
   height: 3rem;
@@ -1360,6 +1336,9 @@ input[type="checkbox"]:checked::before {
 .h-\[65vh\] {
   height: 65vh;
 }
+.h-\[90vh\] {
+  height: 90vh;
+}
 .h-auto {
   height: auto;
 }
@@ -1369,17 +1348,11 @@ input[type="checkbox"]:checked::before {
 .h-screen {
   height: 100vh;
 }
-.h-\[90vh\] {
-  height: 90vh;
-}
 .max-h-16 {
   max-height: 4rem;
 }
 .max-h-\[80vh\] {
   max-height: 80vh;
-}
-.max-h-\[90vh\] {
-  max-height: 90vh;
 }
 .min-h-\[100vh\] {
   min-height: 100vh;
@@ -1564,12 +1537,22 @@ input[type="checkbox"]:checked::before {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+.bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-dark\/50 {
   background-color: rgb(0 0 0 / 0.5);
 }
 .bg-feature {
   --tw-bg-opacity: 1;
   background-color: rgb(237 213 135 / var(--tw-bg-opacity));
+}
+.bg-feature\/80 {
+  background-color: rgb(237 213 135 / 0.8);
 }
 .bg-feature\/95 {
   background-color: rgb(237 213 135 / 0.95);
@@ -1583,16 +1566,6 @@ input[type="checkbox"]:checked::before {
 }
 .bg-white\/80 {
   background-color: rgb(255 255 255 / 0.8);
-}
-.bg-black\/80 {
-  background-color: rgb(0 0 0 / 0.8);
-}
-.bg-dark {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-feature\/80 {
-  background-color: rgb(237 213 135 / 0.8);
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1636,6 +1609,9 @@ input[type="checkbox"]:checked::before {
 .bg-\[url\(\'\/uploads\/images\/pathways-of-life-11\.JPG\'\)\] {
   background-image: url('/uploads/images/pathways-of-life-11.JPG');
 }
+.bg-\[url\(\'\/uploads\/images\/pathways-of-life-13\.jpg\'\)\] {
+  background-image: url('/uploads/images/pathways-of-life-13.jpg');
+}
 .bg-\[url\(\'\/uploads\/images\/pathways-of-life-8\.jpg\'\)\] {
   background-image: url('/uploads/images/pathways-of-life-8.jpg');
 }
@@ -1647,9 +1623,6 @@ input[type="checkbox"]:checked::before {
 }
 .bg-\[url\(\'\{\{page\.testimonials\.background_image\}\}\'\)\] {
   background-image: url('{{page.testimonials.background_image}}');
-}
-.bg-\[url\(\'\/uploads\/images\/pathways-of-life-13\.jpg\'\)\] {
-  background-image: url('/uploads/images/pathways-of-life-13.jpg');
 }
 .bg-contain {
   background-size: contain;
@@ -1743,18 +1716,6 @@ input[type="checkbox"]:checked::before {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1826,6 +1787,9 @@ input[type="checkbox"]:checked::before {
 .text-\[10vw\] {
   font-size: 10vw;
 }
+.text-\[2\.75rem\] {
+  font-size: 2.75rem;
+}
 .text-\[2rem\] {
   font-size: 2rem;
 }
@@ -1835,12 +1799,6 @@ input[type="checkbox"]:checked::before {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-.text-\[2\.5rem\] {
-  font-size: 2.5rem;
-}
-.text-\[2\.75rem\] {
-  font-size: 2.75rem;
 }
 .font-\[100\] {
   font-weight: 100;
@@ -1872,14 +1830,11 @@ input[type="checkbox"]:checked::before {
 .leading-\[1em\] {
   line-height: 1em;
 }
-.leading-tight {
-  line-height: 1.25;
-}
 .leading-snug {
   line-height: 1.375;
 }
-.leading-normal {
-  line-height: 1.5;
+.leading-tight {
+  line-height: 1.25;
 }
 .tracking-tighter {
   letter-spacing: -0.05em;
@@ -1979,6 +1934,9 @@ input[type="checkbox"]:checked::before {
 .placeholder\:text-white::placeholder {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:border-0:hover {
+  border-width: 0px;
 }
 .hover\:bg-feature\/70:hover {
   background-color: rgb(237 213 135 / 0.7);
@@ -2202,6 +2160,10 @@ input[type="checkbox"]:checked::before {
     padding-left: 3rem;
     padding-right: 3rem;
   }
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
   .md\:px-5p {
     padding-left: 5%;
     padding-right: 5%;
@@ -2209,10 +2171,6 @@ input[type="checkbox"]:checked::before {
   .md\:py-10p {
     padding-top: 10%;
     padding-bottom: 10%;
-  }
-  .md\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
   }
   .md\:pb-10p {
     padding-bottom: 10%;
