removed pathways of life banner and popup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Banner Masterclass -->
-    {% include banner-masterclass.html %}
+    <!-- {% include banner-masterclass.html %} -->
 
     <!-- Site Header -->
     {% include mobile-nav.html %}
@@ -21,7 +21,7 @@
     {% include site-footer.html %}
 
     <!-- Popup TTC -->
-    {% include popup-pathways-of-life.html %}
+    <!-- {% include popup-pathways-of-life.html %} -->
 
     <!-- Cookie Banner -->
     {% include cookie-banner.html %}
