--- a/_includes/popup-mentorship.html
+++ b/_includes/popup-mentorship.html
@@ -5,10 +5,10 @@
         <button id="closePopup" class="absolute top-[1rem] md:top-[2rem] right-[1.5rem] md:right-[2.5rem] text-feature text-[3rem] font-extralight hover:text-black hover:duration-500">&times;</button>
 
         <!-- Images for desktop and mobile -->
-        <img src="/uploads/images/manamei-90.jpg" alt="Liberation Through Movement Mentorship with Mana Mei" class="w-full border border-feature">
+        <img src="/uploads/images/ltm-mentorship-popup.jpg" alt="Liberation Through Movement Mentorship with Mana Mei" class="w-full border border-feature">
 
         <!-- Learn More Button -->
-        <button id="learnMoreButton" href="/liberation-through-movement-mentorship.html" class="absolute bottom-[32%] right-[3rem] bg-feature/95 rounded-[4rem] hover:bg-feature/70 hover:duration-500 py-[0.25rem] px-[1.5rem] text-black">
+        <button id="learnMoreButton" href="/liberation-through-movement-mentorship.html" class="absolute bottom-[10%] md:bottom-[15%] right-[1.3rem] md:right-[1.5rem] bg-feature/95 rounded-[4rem] hover:bg-feature/70 hover:duration-500 py-[0.25rem] px-[1.5rem] text-black">
             Learn More
         </button>
     </div>
